# kursovaya_4_Alena_Ryabova

./: README.md  pyproject.toml
src/: main.py  utils.py  vacancies.json  vacancies.py
