[tool.poetry]
name = "kursovaya-4-alena-ryabova"
version = "0.1.0"
description = ""
authors = ["Alena_RA <147716748+Alena-Ryabova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
